--- a/Python_test2.ipynb
+++ b/Python_test2.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "48993e1a-d1ea-4846-88ba-1507f6c63cd1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -89,6 +91,44 @@
     "age = input(\"Сколько тебе лет? Введите целое число: \")\n",
     "height = input(\"Твой рост в метрах? (например 1.94): \")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "254c4bfb-829c-4f16-a71a-973539efe409",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите число:  35\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сумма чётных чисел от 1 до 35 равна 306\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Введите число: \"))\n",
+    "sum = 0\n",
+    "for i in range(1, a + 1):\n",
+    "    if i % 2 == 0:\n",
+    "        sum = sum + i\n",
+    "print(\"Сумма чётных чисел от 1 до\", a, \"равна\", sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6599ec6f-c6f1-4c7a-8004-45e841795f05",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
