--- a/Python_test2.ipynb
+++ b/Python_test2.ipynb
@@ -124,8 +124,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6599ec6f-c6f1-4c7a-8004-45e841795f05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сумма чисел: 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5, 6]\n",
+    "total = 0\n",
+    "for num in numbers:\n",
+    "    total = total + num\n",
+    "print(\"Сумма чисел:\", total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "39f03d67-7691-4039-977a-44f4fad07f8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Максимальное число: 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [10, 3, 25, 7, 19]\n",
+    "max_num = nums[0]\n",
+    "for n in nums:\n",
+    "    if n > max_num:\n",
+    "        max_num = n\n",
+    "print(\"Максимальное число:\", max_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "776be36f-6742-443d-913b-980a7832315d",
    "metadata": {},
    "outputs": [],
    "source": []
