--- a/Python_test2.ipynb
+++ b/Python_test2.ipynb
@@ -166,6 +166,68 @@
     "        max_num = n\n",
     "print(\"Максимальное число:\", max_num)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ebd2f8dd-9b78-4ff9-9505-aeb58332a529",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Insert text in english:  hello\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Количество гласных: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = input(\"Insert text in english: \").lower()\n",
+    "count = 0\n",
+    "for ch in text:\n",
+    "    if ch in ['a', 'e', 'i', 'o', 'u', 'y']:\n",
+    "        count = count + 1\n",
+    "print(\"Количество гласных:\", count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "27e0bbd1-7acf-45d3-bccb-d5f82b61eb62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите слово:  довод\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Это палиндром!\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = input(\"Введите слово: \").lower()\n",
+    "reversed_word = \"\"\n",
+    "for char in word:\n",
+    "    reversed_word = char + reversed_word\n",
+    "if word == reversed_word:\n",
+    "    print(\"Это палиндром!\")\n",
+    "else:\n",
+    "    print(\"Это не палиндром.\")"
+   ]
   }
  ],
  "metadata": {
